--- a/src/sass/navigation/_menus.scss
+++ b/src/sass/navigation/_menus.scss
@@ -1,7 +1,6 @@
 .main-navigation {
-	clear: both;
-	display: block;
-	float: left;
+	display: flex;
+	flex-wrap: wrap;
 	width: 100%;
 
 	ul {
@@ -17,6 +16,7 @@
 			top: 100%;
 			left: -999em;
 			z-index: 99999;
+			background-color: $color__text-main;
 
 			ul {
 				left: -999em;
@@ -55,12 +55,15 @@
 
 		&:hover > a,
 		&.focus > a {
+			background-color: $color__background-body;
+			color: $color__text-main;
 		}
 	}
 
 	a {
 		display: block;
 		text-decoration: none;
+		padding: 0.75em 1.5em;
 	}
 
 	.current_page_item > a,
