--- a/src/sass/site/_site.scss
+++ b/src/sass/site/_site.scss
@@ -21,5 +21,48 @@
 .site-footer {
 	background: $color__text-main;
 
-	a { color: $color__background-body; }
+	&, a { color: $color__background-body; }
+}
+
+.site-header,
+.site-branding {
+	display: flex;
+	align-items: center;
+
+	@media screen and (max-width: 37.5em) { flex-wrap: wrap; }
+}
+
+.site-header { padding: 1em; }
+
+.site-branding {
+	flex-direction: column;
+	width: 100%;
+}
+
+.site-title,
+.site-description {
+	margin: 0;
+	padding: 0.75rem;
+}
+
+@media screen and (min-width: 37.5em) {
+	.site-header,
+	.site-branding {
+		align-items: flex-end;
+	}
+
+	.site-branding {
+		width: 25%;
+		text-align: right;
+	}
+
+	.site-title,
+	.site-description {
+		border-right: 1px solid $color__background-body;
+	}
+
+	.site-description,
+	.main-navigation .menu > li {
+		border-top: 1px solid $color__background-body;
+	}
 }
