--- a/src/sass/navigation/_menus.scss
+++ b/src/sass/navigation/_menus.scss
@@ -77,6 +77,7 @@
 .menu-toggle,
 .main-navigation.toggled ul {
 	display: block;
+	margin: 0 auto;
 }
 
 @media screen and (min-width: 37.5em) {
@@ -86,6 +87,7 @@
 	.main-navigation {
 		.nav-menu {
 			display: flex;
+			flex-wrap: wrap;
 			align-items: flex-end;
 			height: 100%;
 		}
