--- a/src/sass/site/_site.scss
+++ b/src/sass/site/_site.scss
@@ -52,7 +52,7 @@
 	}
 
 	.site-branding {
-		width: 25%;
+		width: 33%;
 		text-align: right;
 	}
 
@@ -62,7 +62,7 @@
 	}
 
 	.site-description,
-	.main-navigation .menu > li {
+	.main-navigation .nav-menu {
 		border-top: 1px solid $color__background-body;
 	}
 }
