get rid of sidebars

--- a/src/sass/site/_site.scss
+++ b/src/sass/site/_site.scss
@@ -1,4 +1,4 @@
-@import "../layout/sidebar-content";
+@import "../layout/sidebar-content-sidebar";
 
 /*--------------------------------------------------------------
 ## Posts and pages
