--- a/src/sass/forms/_buttons.scss
+++ b/src/sass/forms/_buttons.scss
@@ -1,22 +1,19 @@
+.button,
 button,
 input[type="button"],
 input[type="reset"],
 input[type="submit"] {
-	border: 1px solid;
-	border-color: $color__border-button;
+	border: none;
 	border-radius: 3px;
 	background: $color__background-button;
-	color: rgba(0, 0, 0, .8);
-	@include font-size(0.75);
-	line-height: 1;
-	padding: .6em 1em .4em;
+	color: $color__text-button;
+	font-weight: 700;
+	padding: .75em 1em;
+	text-decoration: none;
 
-	&:hover {
-		border-color: $color__border-button-hover;
-	}
-
+	&:hover,
 	&:active,
 	&:focus {
-		border-color: $color__border-button-focus;
+		background-color: lighten($color__background-button, 15%);
 	}
 }
