--- a/src/sass/typography/_copy.scss
+++ b/src/sass/typography/_copy.scss
@@ -43,3 +43,7 @@ mark, ins {
 big {
 	font-size: 125%;
 }
+
+.text-left { text-align: left; }
+.text-center { text-align: center; }
+.text-right { text-align: right; }
