tweak carousel spacing

--- a/src/sass/site/_site.scss
+++ b/src/sass/site/_site.scss
@@ -6,6 +6,11 @@
 @import "primary/posts-and-pages";
 
 /*--------------------------------------------------------------
+## Artifacts
+--------------------------------------------------------------*/
+@import "primary/artifacts";
+
+/*--------------------------------------------------------------
 ## Comments
 --------------------------------------------------------------*/
 @import "primary/comments";
