--- a/src/sass/navigation/_menus.scss
+++ b/src/sass/navigation/_menus.scss
@@ -105,14 +105,11 @@
 		overflow: hidden;
 	}
 
-	.nav-previous {
-		float: left;
-		width: 50%;
-	}
-
-	.nav-next {
-		float: right;
-		text-align: right;
-		width: 50%;
+	@media screen and (min-width: 37.5em) {
+		.nav-links {
+			padding: 0 25%;
+			display: flex;
+			justify-content: space-between;
+		}
 	}
 }
