tweak mayor wall style

--- a/src/sass/site/_site.scss
+++ b/src/sass/site/_site.scss
@@ -11,6 +11,11 @@
 @import "primary/artifacts";
 
 /*--------------------------------------------------------------
+## Artifacts
+--------------------------------------------------------------*/
+@import "primary/mayors";
+
+/*--------------------------------------------------------------
 ## Comments
 --------------------------------------------------------------*/
 @import "primary/comments";
