--- a/src/sass/variables-site/_colors.scss
+++ b/src/sass/variables-site/_colors.scss
@@ -19,3 +19,5 @@ $color__text-main: $site-gray;
 
 $color__border-input: #ccc;
 $color__border-abbr: #666;
+
+$color__homepage-resource-background: #1f375d;
