tweak image display with wide text and one or few images

--- a/src/sass/site/primary/_artifacts.scss
+++ b/src/sass/site/primary/_artifacts.scss
@@ -1,7 +1,16 @@
 .image-carousel {
 	margin-bottom: 5em;
 
-	figure { padding: 1em;}
+	figure {
+		padding: 1em;
+		max-width: 50%;
+		text-align: center;
+
+		img {
+			display: block;
+			margin: 0 auto;
+		}
+	}
 }
 
 #timeline-embed,
