--- a/style.css
+++ b/style.css
@@ -1,21 +1,21 @@
-/*!
-Theme Name: DigitalKM
-Theme URI: http://underscores.me/
-Author: AndrewRMinion Design
-Author URI: https://andrewrminion.com/
-Description: Custom theme: DigitalKM, developed by AndrewRMinion Design
-Version: 1.0.14
-License: GNU General Public License v2 or later
-License URI: LICENSE
-Text Domain: digitalkm
-Tags: custom-background, custom-logo, custom-menu, featured-images, threaded-comments, translation-ready
+/**
+ * Theme Name: DigitalKM
+ * Theme URI: http://underscores.me/
+ * Author: AndrewRMinion Design
+ * Author URI: https://andrewrminion.com/
+ * Description: Custom theme: DigitalKM, developed by AndrewRMinion Design
+ * Version: 1.0.14
+ * License: GNU General Public License v2 or later
+ * License URI: LICENSE
+ * Text Domain: digitalkm
+ * Tags: custom-background, custom-logo, custom-menu, featured-images, threaded-comments, translation-ready
 
-This theme, like WordPress, is licensed under the GPL.
-Use it to make something cool, have fun, and share what you've learned with others.
+ * This theme, like WordPress, is licensed under the GPL.
+ * Use it to make something cool, have fun, and share what you've learned with others.
 
-DigitalKM is based on Underscores https://underscores.me/, (C) 2012-2017 Automattic, Inc.
-Underscores is distributed under the terms of the GNU GPL v2 or later.
+ * DigitalKM is based on Underscores https://underscores.me/, (C) 2012-2017 Automattic, Inc.
+ * Underscores is distributed under the terms of the GNU GPL v2 or later.
 
-Normalizing styles have been helped along thanks to the fine work of
-Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
-*/
+ * Normalizing styles have been helped along thanks to the fine work of
+ * Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
+ */
